chore: updated banners text

--- a/public/pages/banners.html
+++ b/public/pages/banners.html
@@ -1116,7 +1116,7 @@
                   class="d-flex align-items-center gap-3 gap-md-4 fs-8 pb-3 pg-md-0"
                 >
                   <h3 class="m-0">
-                    Ultimate Peace of Mind for Your Glass & Doors , Protection,
+                    Ultimate Peace of Mind for Your Glass & Doors ‚ Protection ‚
                     Precision and Guarantees All in One, Glass Cleanup.
                   </h3>
                 </div>
@@ -1125,9 +1125,9 @@
                   <p>
                     You won't have to worry about broken glass fragments or
                     hazardous debris left behind. We ensure your home or
-                    business is left spotless, making the area safe for
-                    everyone. For same-day service, projects must be approved
-                    before 3 PM; otherwise, the cleanup will be scheduled for
+                    business is left spotless‚ making the area safe for
+                    everyone. For same-day service‚ projects must be approved
+                    before 3 PM; otherwise‚ the cleanup will be scheduled for
                     the next business day.
                   </p>
                 </div>
@@ -1147,7 +1147,17 @@
                 </div>
 
                 <div class="banners-content d-grid gap-3 gap-lg-6">
-                  <p>NA</p>
+                  <p>
+                    When you're in an emergency and need immediate protection‚
+                    we offer Free Board-Up Services with any glass replacement.
+                    We'll secure your property while you wait for the glass
+                    installation‚ ensuring you're protected from potential
+                    damage or break-ins at no extra cost. Available during
+                    regular business hours with a same-day service option if
+                    booked before 3 PM‚ or next-day for late requests. You can
+                    also opt in for after-hours emergency boards at a discounted
+                    price with any glass replacement.
+                  </p>
                 </div>
               </div>
             </div>
@@ -1166,14 +1176,14 @@
                 <div class="banners-content d-grid gap-3 gap-lg-6">
                   <p>
                     Our 2-Year Glass Breakage Warranty offers unmatched peace of
-                    mind, available exclusively at Glassma. If your glass breaks
-                    for any reason—whether due to accidents, vandalism, or even
-                    an unexpected mishap like a neighbor's kid—we'll replace it,
-                    no questions asked. Simply contact us, and we'll take care
+                    mind‚ available exclusively at Glassma. If your glass breaks
+                    for any reason—whether due to accidents‚ vandalism‚ or even
+                    an unexpected mishap like a neighbor’s kid—we’ll replace it‚
+                    no questions asked. Simply contact us‚ and we’ll take care
                     of ordering the replacement glass. A 15% deductible applies
-                    to help prevent misuse, and the warranty covers one
-                    replacement per glass. Please note that travel charges,
-                    rental equipment, and special permits are not included.
+                    to help prevent misuse‚ and the warranty covers one
+                    replacement per glass. Please note that travel charges‚
+                    rental equipment‚ and special permits are not included.
                   </p>
                 </div>
               </div>
@@ -1195,12 +1205,12 @@
                   <p>
                     Our 10-Year Seal Breakage Warranty covers insulated glass
                     units (IGUs) up to 35 square feet. If the seal fails within
-                    10 years, leading to condensation between the panes, we'll
+                    10 years‚ leading to condensation between the panes‚ we'll
                     replace the unit at no cost. This warranty ensures long-term
-                    protection, preserving the efficiency and clarity of your
+                    protection‚ preserving the efficiency and clarity of your
                     glass. Please note= labor costs beyond the initial
-                    installation warranty, as well as travel charges, rental
-                    equipment, and special permits, are not covered.
+                    installation warranty‚ as well as travel charges‚ rental
+                    equipment‚ and special permits‚ are not covered.
                   </p>
                 </div>
               </div>
@@ -1222,8 +1232,8 @@
                   <p>
                     We stand behind the quality of our workmanship with our
                     Installation Warranty. If any installation-related issues
-                    arise within 1 year of service, such as improper sealing,
-                    alignment, or fitting, we will correct it at no additional
+                    arise within 1 year of service‚ such as improper sealing‚
+                    alignment‚ or fitting‚ we will correct it at no additional
                     cost. Our team ensures that every installation meets the
                     highest standards for long-lasting performance.
                   </p>
@@ -1248,8 +1258,8 @@
                     We understand the importance of timely project completion.
                     That's why we offer a Lead Time Warranty. If we fail to meet
                     our promised delivery and installation deadlines due to
-                    delays within our control, you will receive a 10% discount
-                    on the total project cost. Your time is valuable, and we are
+                    delays within our control‚ you will receive a 10% discount
+                    on the total project cost. Your time is valuable‚ and we are
                     committed to honoring our deadlines. This discount is a
                     one-time offer and applies only if we exceed the agreed
                     timeline.
@@ -1274,15 +1284,15 @@
 
                 <div class="banners-content d-grid gap-3 gap-lg-6">
                   <p>
-                    Our Price Match Guarantee ensures you'll never overpay for
+                    Our Price Match Guarantee ensures you’ll never overpay for
                     our services. If you find a lower price for the same service
-                    within 30 days of your purchase, we'll match it—even if the
+                    within 30 days of your purchase‚ we’ll match it—even if the
                     service has already been completed. This guarantee applies
                     to any licensed and insured competitor offering a similar
-                    service with comparable materials, warranties, and a strong
-                    reputation. To qualify, the quote must be a written estimate
-                    from the provider, including their business details. At
-                    Glassma, we're committed to providing the best value to our
+                    service with comparable materials‚ warranties‚ and a strong
+                    reputation. To qualify‚ the quote must be a written estimate
+                    from the provider‚ including their business details. At
+                    Glassma‚ we’re committed to providing the best value to our
                     customers.
                   </p>
                 </div>
