feat: banner images added

--- a/public/pages/banners.html
+++ b/public/pages/banners.html
@@ -1106,214 +1106,230 @@
         <!--    BANNERS CONTENT -->
         <!-- ===============================================-->
 
-        <div class="content d-flex flex-column align-items-stretch gap-3">
-          <section class="card p-3 p-lg-4">
+        <div class="content py-4 d-flex flex-column align-items-stretch gap-3">
+          <section class="banners-section card p-3 p-lg-4">
             <div
-              class="card-body position-relative d-grid gap-lg-6 banners-card-container"
+              class="card-body position-relative gap-4 d-grid banners-card-container"
             >
-              <div class="">
-                <div
-                  class="d-flex align-items-center gap-3 gap-md-4 fs-8 pb-3 pg-md-0"
-                >
-                  <h3 class="m-0">
-                    Ultimate Peace of Mind for Your Glass & Doors ‚ Protection ‚
-                    Precision and Guarantees All in One, Glass Cleanup.
-                  </h3>
-                </div>
+              <div
+                class="banners-header position-relative d-flex align-items-center w-100 gap-3 gap-md-4 pg-md-0"
+              >
+                <img
+                  class="w-100 rounded mx-lg-auto"
+                  src="../assets/img/banners/banner-1.png"
+                  alt=""
+                  role="presentation"
+                />
+              </div>
 
-                <div class="banners-content d-grid gap-3 gap-lg-6">
-                  <p>
-                    You won't have to worry about broken glass fragments or
-                    hazardous debris left behind. We ensure your home or
-                    business is left spotless‚ making the area safe for
-                    everyone. For same-day service‚ projects must be approved
-                    before 3 PM; otherwise‚ the cleanup will be scheduled for
-                    the next business day.
-                  </p>
-                </div>
+              <div class="banners-content d-grid gap-3 px-lg-6 mx-lg-auto">
+                <h3 class="m-0 fs-8 card-title fs-lg-6">
+                  Ultimate Peace of Mind for Your Glass & Doors ‚ Protection ‚
+                  Precision and Guarantees All in One, Glass Cleanup.
+                </h3>
+                <p class="card-text">
+                  You won't have to worry about broken glass fragments or
+                  hazardous debris left behind. We ensure your home or business
+                  is left spotless‚ making the area safe for everyone. For
+                  same-day service‚ projects must be approved before 3 PM;
+                  otherwise‚ the cleanup will be scheduled for the next business
+                  day.
+                </p>
               </div>
             </div>
           </section>
 
-          <section class="card p-3 p-lg-4">
+          <section class="banners-section card p-3 p-lg-4">
             <div
-              class="card-body position-relative d-grid gap-lg-6 banners-card-container"
+              class="card-body position-relative gap-4 d-grid banners-card-container"
             >
-              <div class="">
-                <div
-                  class="d-flex align-items-center gap-3 gap-md-4 fs-8 pb-3 pg-md-0"
-                >
-                  <h3 class="m-0">Board Up</h3>
-                </div>
-
-                <div class="banners-content d-grid gap-3 gap-lg-6">
-                  <p>
-                    When you're in an emergency and need immediate protection‚
-                    we offer Free Board-Up Services with any glass replacement.
-                    We'll secure your property while you wait for the glass
-                    installation‚ ensuring you're protected from potential
-                    damage or break-ins at no extra cost. Available during
-                    regular business hours with a same-day service option if
-                    booked before 3 PM‚ or next-day for late requests. You can
-                    also opt in for after-hours emergency boards at a discounted
-                    price with any glass replacement.
-                  </p>
-                </div>
+              <div
+                class="banners-header position-relative d-flex align-items-center w-100 gap-3 gap-md-4 pg-md-0"
+              >
+                <img
+                  class="w-100 rounded mx-lg-auto"
+                  src="../assets/img/banners/banner-2.png"
+                  alt=""
+                  role="presentation"
+                />
               </div>
-            </div>
-          </section>
-          <section class="card p-3 p-lg-4">
-            <div
-              class="card-body position-relative d-grid gap-lg-6 banners-card-container"
-            >
-              <div class="">
-                <div
-                  class="d-flex align-items-center gap-3 gap-md-4 fs-8 pb-3 pg-md-0"
-                >
-                  <h3 class="m-0">Glass Breakage Warranty (2 Years)</h3>
-                </div>
 
-                <div class="banners-content d-grid gap-3 gap-lg-6">
-                  <p>
-                    Our 2-Year Glass Breakage Warranty offers unmatched peace of
-                    mind‚ available exclusively at Glassma. If your glass breaks
-                    for any reason—whether due to accidents‚ vandalism‚ or even
-                    an unexpected mishap like a neighbor’s kid—we’ll replace it‚
-                    no questions asked. Simply contact us‚ and we’ll take care
-                    of ordering the replacement glass. A 15% deductible applies
-                    to help prevent misuse‚ and the warranty covers one
-                    replacement per glass. Please note that travel charges‚
-                    rental equipment‚ and special permits are not included.
-                  </p>
-                </div>
+              <div class="banners-content d-grid gap-3 px-lg-6 mx-lg-auto">
+                <h3 class="m-0 fs-8 card-title fs-lg-6">Board Up</h3>
+                <p class="card-text">
+                  When you're in an emergency and need immediate protection‚ we
+                  offer Free Board-Up Services with any glass replacement. We'll
+                  secure your property while you wait for the glass
+                  installation‚ ensuring you're protected from potential damage
+                  or break-ins at no extra cost. Available during regular
+                  business hours with a same-day service option if booked before
+                  3 PM‚ or next-day for late requests. You can also opt in for
+                  after-hours emergency boards at a discounted price with any
+                  glass replacement.
+                </p>
               </div>
             </div>
           </section>
 
-          <section class="card p-3 p-lg-4">
+          <section class="banners-section card p-3 p-lg-4">
             <div
-              class="card-body position-relative d-grid gap-lg-6 banners-card-container"
+              class="card-body position-relative gap-4 d-grid banners-card-container"
             >
-              <div class="">
-                <div
-                  class="d-flex align-items-center gap-3 gap-md-4 fs-8 pb-3 pg-md-0"
-                >
-                  <h3 class="m-0">Seal Breakage Warranty (10 Years)</h3>
-                </div>
+              <div
+                class="banners-header position-relative d-flex align-items-center w-100 gap-3 gap-md-4 pg-md-0"
+              >
+                <img
+                  class="w-100 rounded mx-lg-auto"
+                  src="../assets/img/banners/banner-3.png"
+                  alt=""
+                  role="presentation"
+                />
+              </div>
 
-                <div class="banners-content d-grid gap-3 gap-lg-6">
-                  <p>
-                    Our 10-Year Seal Breakage Warranty covers insulated glass
-                    units (IGUs) up to 35 square feet. If the seal fails within
-                    10 years‚ leading to condensation between the panes‚ we'll
-                    replace the unit at no cost. This warranty ensures long-term
-                    protection‚ preserving the efficiency and clarity of your
-                    glass. Please note= labor costs beyond the initial
-                    installation warranty‚ as well as travel charges‚ rental
-                    equipment‚ and special permits‚ are not covered.
-                  </p>
-                </div>
+              <div class="banners-content d-grid gap-3 px-lg-6 mx-lg-auto">
+                <h3 class="m-0 fs-8 card-title fs-lg-6">
+                  Glass Breakage Warranty (2 Years)
+                </h3>
+                <p class="card-text">
+                  Our 2-Year Glass Breakage Warranty offers unmatched peace of
+                  mind‚ available exclusively at Glassma. If your glass breaks
+                  for any reason—whether due to accidents‚ vandalism‚ or even an
+                  unexpected mishap like a neighbor’s kid—we’ll replace it‚ no
+                  questions asked. Simply contact us‚ and we’ll take care of
+                  ordering the replacement glass. A 15% deductible applies to
+                  help prevent misuse‚ and the warranty covers one replacement
+                  per glass. Please note that travel charges‚ rental equipment‚
+                  and special permits are not included.
+                </p>
               </div>
             </div>
           </section>
 
-          <section class="card p-3 p-lg-4">
+          <section class="banners-section card p-3 p-lg-4">
             <div
-              class="card-body position-relative d-grid gap-lg-6 banners-card-container"
+              class="card-body position-relative gap-4 d-grid banners-card-container"
             >
-              <div class="">
-                <div
-                  class="d-flex align-items-center gap-3 gap-md-4 fs-8 pb-3 pg-md-0"
-                >
-                  <h3 class="m-0">Installation Warranty (1 year)</h3>
-                </div>
+              <div
+                class="banners-header position-relative d-flex align-items-center w-100 gap-3 gap-md-4 pg-md-0"
+              >
+                <img
+                  class="w-100 rounded mx-lg-auto"
+                  src="../assets/img/banners/banner-4.png"
+                  alt=""
+                  role="presentation"
+                />
+              </div>
 
-                <div class="banners-content d-grid gap-3 gap-lg-6">
-                  <p>
-                    We stand behind the quality of our workmanship with our
-                    Installation Warranty. If any installation-related issues
-                    arise within 1 year of service‚ such as improper sealing‚
-                    alignment‚ or fitting‚ we will correct it at no additional
-                    cost. Our team ensures that every installation meets the
-                    highest standards for long-lasting performance.
-                  </p>
-                </div>
+              <div class="banners-content d-grid gap-3 px-lg-6 mx-lg-auto">
+                <h3 class="m-0 fs-8 card-title fs-lg-6">
+                  Seal Breakage Warranty (10 Years)
+                </h3>
+                <p class="card-text">
+                  Our 10-Year Seal Breakage Warranty covers insulated glass
+                  units (IGUs) up to 35 square feet. If the seal fails within 10
+                  years‚ leading to condensation between the panes‚ we'll
+                  replace the unit at no cost. This warranty ensures long-term
+                  protection‚ preserving the efficiency and clarity of your
+                  glass. Please note= labor costs beyond the initial
+                  installation warranty‚ as well as travel charges‚ rental
+                  equipment‚ and special permits‚ are not covered.
+                </p>
               </div>
             </div>
           </section>
 
-          <section class="card p-3 p-lg-4">
+          <section class="banners-section card p-3 p-lg-4">
             <div
-              class="card-body position-relative d-grid gap-lg-6 banners-card-container"
+              class="card-body position-relative gap-4 d-grid banners-card-container"
             >
-              <div class="">
-                <div
-                  class="d-flex align-items-center gap-3 gap-md-4 fs-8 pb-3 pg-md-0"
-                >
-                  <h3 class="m-0">Lead Time Warranty</h3>
-                </div>
+              <div
+                class="banners-header position-relative d-flex align-items-center w-100 gap-3 gap-md-4 pg-md-0"
+              >
+                <img
+                  class="w-100 rounded mx-lg-auto"
+                  src="../assets/img/banners/banner-5.png"
+                  alt=""
+                  role="presentation"
+                />
+              </div>
 
-                <div class="banners-content d-grid gap-3 gap-lg-6">
-                  <p>
-                    We understand the importance of timely project completion.
-                    That's why we offer a Lead Time Warranty. If we fail to meet
-                    our promised delivery and installation deadlines due to
-                    delays within our control‚ you will receive a 10% discount
-                    on the total project cost. Your time is valuable‚ and we are
-                    committed to honoring our deadlines. This discount is a
-                    one-time offer and applies only if we exceed the agreed
-                    timeline.
-                  </p>
-                </div>
+              <div class="banners-content d-grid gap-3 px-lg-6 mx-lg-auto">
+                <h3 class="m-0 fs-8 card-title fs-lg-6">
+                  Installation Warranty (1 year)
+                </h3>
+                <p class="card-text">
+                  We stand behind the quality of our workmanship with our
+                  Installation Warranty. If any installation-related issues
+                  arise within 1 year of service‚ such as improper sealing‚
+                  alignment‚ or fitting‚ we will correct it at no additional
+                  cost. Our team ensures that every installation meets the
+                  highest standards for long-lasting performance.
+                </p>
               </div>
             </div>
           </section>
 
-          <section class="card p-3 p-lg-4">
+          <section class="banners-section card p-3 p-lg-4">
             <div
-              class="card-body position-relative d-grid gap-lg-6 banners-card-container"
+              class="card-body position-relative gap-4 d-grid banners-card-container"
             >
-              <div class="">
-                <div
-                  class="d-flex align-items-center gap-3 gap-md-4 fs-8 pb-3 pg-md-0"
-                >
-                  <h3 class="m-0">
-                    Price Match Guarantee (Even After Purchase)
-                  </h3>
-                </div>
+              <div
+                class="banners-header position-relative d-flex align-items-center w-100 gap-3 gap-md-4 pg-md-0"
+              >
+                <img
+                  class="w-100 rounded mx-lg-auto"
+                  src="../assets/img/banners/banner-6.png"
+                  alt=""
+                  role="presentation"
+                />
+              </div>
 
-                <div class="banners-content d-grid gap-3 gap-lg-6">
-                  <p>
-                    Our Price Match Guarantee ensures you’ll never overpay for
-                    our services. If you find a lower price for the same service
-                    within 30 days of your purchase‚ we’ll match it—even if the
-                    service has already been completed. This guarantee applies
-                    to any licensed and insured competitor offering a similar
-                    service with comparable materials‚ warranties‚ and a strong
-                    reputation. To qualify‚ the quote must be a written estimate
-                    from the provider‚ including their business details. At
-                    Glassma‚ we’re committed to providing the best value to our
-                    customers.
-                  </p>
-                </div>
+              <div class="banners-content d-grid gap-3 px-lg-6 mx-lg-auto">
+                <h3 class="m-0 fs-8 card-title fs-lg-6">Lead Time Warranty</h3>
+                <p class="card-text">
+                  We understand the importance of timely project completion.
+                  That's why we offer a Lead Time Warranty. If we fail to meet
+                  our promised delivery and installation deadlines due to delays
+                  within our control‚ you will receive a 10% discount on the
+                  total project cost. Your time is valuable‚ and we are
+                  committed to honoring our deadlines. This discount is a
+                  one-time offer and applies only if we exceed the agreed
+                  timeline.
+                </p>
               </div>
             </div>
           </section>
-
-          <section class="card p-3 p-lg-4">
+          <section class="banners-section card p-3 p-lg-4">
             <div
-              class="card-body position-relative d-grid gap-lg-6 banners-card-container"
+              class="card-body position-relative gap-4 d-grid banners-card-container"
             >
-              <div class="">
-                <div
-                  class="d-flex align-items-center gap-3 gap-md-4 fs-8 pb-3 pg-md-0"
-                >
-                  <h3 class="m-0">Free on Purchase</h3>
-                </div>
+              <div
+                class="banners-header position-relative d-flex align-items-center w-100 gap-3 gap-md-4 pg-md-0"
+              >
+                <img
+                  class="w-100 rounded mx-lg-auto"
+                  src="../assets/img/banners/banner-7.png"
+                  alt=""
+                  role="presentation"
+                />
+              </div>
 
-                <div class="banners-content d-grid gap-3 gap-lg-6">
-                  <p>NA</p>
-                </div>
+              <div class="banners-content d-grid gap-3 px-lg-6 mx-lg-auto">
+                <h3 class="m-0 fs-8 card-title fs-lg-6">
+                  Price Match Guarantee (Even After Purchase)
+                </h3>
+                <p class="card-text">
+                  Our Price Match Guarantee ensures you’ll never overpay for our
+                  services. If you find a lower price for the same service
+                  within 30 days of your purchase‚ we’ll match it—even if the
+                  service has already been completed. This guarantee applies to
+                  any licensed and insured competitor offering a similar service
+                  with comparable materials‚ warranties‚ and a strong
+                  reputation. To qualify‚ the quote must be a written estimate
+                  from the provider‚ including their business details. At
+                  Glassma‚ we’re committed to providing the best value to our
+                  customers.
+                </p>
               </div>
             </div>
           </section>
