fix: margin layout of image in desktop view for banners

--- a/public/pages/banners.html
+++ b/public/pages/banners.html
@@ -1106,10 +1106,12 @@
         <!--    BANNERS CONTENT -->
         <!-- ===============================================-->
 
-        <div class="content py-4 d-flex flex-column align-items-stretch gap-3">
-          <section class="banners-section card p-3 p-lg-4">
+        <div
+          class="content py-4 d-flex flex-column align-items-stretch gap-3 gap-lg-5"
+        >
+          <section class="banners-section card p-3 pt-lg-0 px-lg-0">
             <div
-              class="card-body position-relative gap-4 d-grid banners-card-container"
+              class="card-body pt-lg-0 px-lg-0 position-relative gap-4 d-grid banners-card-container"
             >
               <div
                 class="banners-header position-relative d-flex align-items-center w-100 gap-3 gap-md-4 pg-md-0"
@@ -1139,9 +1141,9 @@
             </div>
           </section>
 
-          <section class="banners-section card p-3 p-lg-4">
+          <section class="banners-section card p-3 pt-lg-0 px-lg-0">
             <div
-              class="card-body position-relative gap-4 d-grid banners-card-container"
+              class="card-body pt-lg-0 px-lg-0 position-relative gap-4 d-grid banners-card-container"
             >
               <div
                 class="banners-header position-relative d-flex align-items-center w-100 gap-3 gap-md-4 pg-md-0"
@@ -1171,9 +1173,9 @@
             </div>
           </section>
 
-          <section class="banners-section card p-3 p-lg-4">
+          <section class="banners-section card p-3 pt-lg-0 px-lg-0">
             <div
-              class="card-body position-relative gap-4 d-grid banners-card-container"
+              class="card-body pt-lg-0 px-lg-0 position-relative gap-4 d-grid banners-card-container"
             >
               <div
                 class="banners-header position-relative d-flex align-items-center w-100 gap-3 gap-md-4 pg-md-0"
@@ -1205,9 +1207,9 @@
             </div>
           </section>
 
-          <section class="banners-section card p-3 p-lg-4">
+          <section class="banners-section card p-3 pt-lg-0 px-lg-0">
             <div
-              class="card-body position-relative gap-4 d-grid banners-card-container"
+              class="card-body pt-lg-0 px-lg-0 position-relative gap-4 d-grid banners-card-container"
             >
               <div
                 class="banners-header position-relative d-flex align-items-center w-100 gap-3 gap-md-4 pg-md-0"
@@ -1238,9 +1240,9 @@
             </div>
           </section>
 
-          <section class="banners-section card p-3 p-lg-4">
+          <section class="banners-section card p-3 pt-lg-0 px-lg-0">
             <div
-              class="card-body position-relative gap-4 d-grid banners-card-container"
+              class="card-body pt-lg-0 px-lg-0 position-relative gap-4 d-grid banners-card-container"
             >
               <div
                 class="banners-header position-relative d-flex align-items-center w-100 gap-3 gap-md-4 pg-md-0"
@@ -1269,9 +1271,9 @@
             </div>
           </section>
 
-          <section class="banners-section card p-3 p-lg-4">
+          <section class="banners-section card p-3 pt-lg-0 px-lg-0">
             <div
-              class="card-body position-relative gap-4 d-grid banners-card-container"
+              class="card-body pt-lg-0 px-lg-0 position-relative gap-4 d-grid banners-card-container"
             >
               <div
                 class="banners-header position-relative d-flex align-items-center w-100 gap-3 gap-md-4 pg-md-0"
@@ -1299,9 +1301,9 @@
               </div>
             </div>
           </section>
-          <section class="banners-section card p-3 p-lg-4">
+          <section class="banners-section card p-3 pt-lg-0 px-lg-0">
             <div
-              class="card-body position-relative gap-4 d-grid banners-card-container"
+              class="card-body pt-lg-0 px-lg-0 position-relative gap-4 d-grid banners-card-container"
             >
               <div
                 class="banners-header position-relative d-flex align-items-center w-100 gap-3 gap-md-4 pg-md-0"
