chore: attaching links on contacts scaffolding

--- a/public/pages/projectdetails.html
+++ b/public/pages/projectdetails.html
@@ -6268,18 +6268,62 @@
                                   aria-labelledby="contact-name-1"
                                   data-bs-parent="names-list"
                                 >
-                                  <div class="accordion-body">
-                                    Once you’re set up, payouts arrive in your
-                                    bank account on a 2-day rolling basis. Or
-                                    you can opt to receive payouts weekly or
-                                    monthly.
+                                  <div
+                                    class="accordion-body d-flex justify-content-around"
+                                  >
+                                    <a
+                                      href="#"
+                                      class=""
+                                      aria-label="left nav toggle"
+                                      data-bs-toggle="tooltip"
+                                      data-bs-placement="top"
+                                      title="open latest email"
+                                    >
+                                      <span
+                                        class="inbox-type-email far fa-envelope fs-8"
+                                      ></span>
+                                    </a>
+
+                                    <a
+                                      href="inbox/chat/0"
+                                      class=""
+                                      aria-label="left nav toggle"
+                                      data-bs-toggle="tooltip"
+                                      data-bs-placement="top"
+                                      title="open chats"
+                                    >
+                                      <span
+                                        class="inbox-type-chat far fa-comment fs-8"
+                                      ></span>
+                                    </a>
+                                    <a
+                                      href="#"
+                                      class=""
+                                      aria-label="left nav toggle"
+                                      data-bs-toggle="tooltip"
+                                      data-bs-placement="top"
+                                      title="open SMS"
+                                    >
+                                      <span
+                                        class="inbox-type-sns far fa-comments fs-8"
+                                      ></span>
+                                    </a>
+                                    <a
+                                      href="#"
+                                      class=""
+                                      aria-label="left nav toggle"
+                                      data-bs-toggle="tooltip"
+                                      data-bs-placement="top"
+                                      title="call"
+                                    >
+                                      <span
+                                        class="text-primary fas fa-phone-alt fs-8"
+                                      ></span>
+                                    </a>
                                   </div>
                                 </div>
                               </li>
 
-                              <!--<span
-                                      class="inbox-type-chat far fa-comment fs-8"
-                              ></span>-->
                               <li>Adam</li>
                               <li>Anna</li>
                               <li>Alex</li>
